# conversensus

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  bunfig.toml  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml
.omc/: prd.json  progress.txt  project-memory.json
.omc/plans/: open-questions.md  step0-tauri-graph-editor.md
.omc/sessions/: 89feb4b9-e81a-4db8-a687-cd199f8e8e59.json
.omc/state/: agent-replay-89feb4b9-e81a-4db8-a687-cd199f8e8e59.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
deepse/architecture/: step0.md  step1.md
deepse/contexts/: atproto-integration-strategy.md  index.md
deepse/plans/: step1-implementation.md  step1-phase4d-receive.md  step1-phase4e-bootstrap.md  step1-w3-read-path.md  step1-w3c1-structure-write.md  (+3 more)
scripts/: inspect-local-oplog.ts  inspect-remote-batches.ts  pre-commit
src/: App.css  App.tsx  index.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.omc/: project-memory.json
src-tauri/.omc/state/: agent-replay-89feb4b9-e81a-4db8-a687-cd199f8e8e59.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
src-tauri/.omc/state/checkpoints/: checkpoint-2026-03-14T13-06-14-784Z.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/.omc/state/: agent-replay-89feb4b9-e81a-4db8-a687-cd199f8e8e59.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
src-tauri/icons/.omc/state/checkpoints/: checkpoint-2026-03-14T14-05-23-203Z.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  storage.rs
src-tauri/src/fixtures/: sample.conversensus.json
(+222 files in other folders)
