[package]
name = "conversensus"
version = "0.1.0"
description = "conversensus graph editor"
authors = []
edition = "2021"

[lib]
name = "conversensus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "conversensus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
