[package]
name = "conversensus"
version = "0.1.0"
description = "conversensus graph editor"
authors = []
edition = "2021"

[lib]
name = "conversensus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "conversensus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = { version = "0.6", features = ["relax-sign-encoding", "disable-encoding-assertions"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Workaround for tao panic on macOS 26 Tahoe (Darwin 25+)
# pthread_main_np() returns 0 incorrectly; patch bypasses the check
# See: https://github.com/tauri-apps/tao/issues/1171
[patch.crates-io]
tao = { path = "patches/tao" }
